@startuml

title __NOTIFICATIONS's Class Diagram__\n

  package  {
    package com.habitrpg.android.habitica {
      package com.habitrpg.android.habitica.helpers {
        package com.habitrpg.android.habitica.helpers.notifications {
          class HabiticaFirebaseInstanceIDService {
              + onTokenRefresh()
          }
        }
      }
    }
  }
  

  package  {
    package com.habitrpg.android.habitica {
      package com.habitrpg.android.habitica.helpers {
        package com.habitrpg.android.habitica.helpers.notifications {
          class HabiticaFirebaseMessagingService {
              + onMessageReceived()
          }
        }
      }
    }
  }
  

  package  {
    package com.habitrpg.android.habitica {
      package com.habitrpg.android.habitica.helpers {
        package com.habitrpg.android.habitica.helpers.notifications {
          class HabiticaLocalNotificationFactory {
              + build()
          }
        }
      }
    }
  }
  

  HabiticaFirebaseInstanceIDService -up-|> FirebaseInstanceIdService
  HabiticaFirebaseInstanceIDService o-- PushNotificationManager : pushNotificationManager
  HabiticaFirebaseMessagingService -up-|> FirebaseMessagingService
  HabiticaFirebaseMessagingService o-- PushNotificationManager : pushNotificationManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
